feat: implement bouncer
This service authorizes calls and converts extensions to users. This
information can be used in Asterisk to take action.
